--- a/admin.html
+++ b/admin.html
@@ -37,7 +37,7 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link">Registro</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link active">Administración</a></li>
+                    <li class="nav-item"><a href="acceso-gym.html" class="nav-link active">Control de Acceso</a></li>
                 </ul>
             </div>
         </nav>
@@ -667,5 +667,7 @@
             displayData(loadData());
         });
     </script>
+    <!-- Script para mostrar días asistidos -->
+    <script src="js/admin-dias-asistidos.js"></script>
 </body>
 </html>
