--- a/acceso-gym.html
+++ b/acceso-gym.html
@@ -158,7 +158,7 @@
             <p class="copyright">Copyright &copy; 2025 - MacroGym Fitness Todos los derechos reservados</p>
         </div>
     </footer>
-
+    <script src="js/data-service.js"></script>
     <script src="js/acceso-gym.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
