--- a/admin.html
+++ b/admin.html
@@ -609,5 +609,6 @@
     </script>
     <!-- Script para mostrar días asistidos -->
     <script src="js/admin-dias-asistidos.js"></script>
+    <script src="js/data-service.js"></script>
 </body>
 </html>
