--- a/fitness-wiki.html
+++ b/fitness-wiki.html
@@ -1920,7 +1920,7 @@
                         
                         <div class="article-content">
                             <div class="article-image">
-                                <img src="/placeholder.svg?height=300&width=500" alt="Máquina Smith">
+                                <img src="img wiki fitness/maquina smith.jpg" alt="Máquina Smith">
                             </div>
                             
                             <h3>¿Qué es la máquina Smith?</h3>
