--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
                     <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
-                    <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
+                    <li class="nav-item"><a href="clientes.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
         </nav>
