--- a/acceso-gym.html
+++ b/acceso-gym.html
@@ -33,7 +33,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
-                    <li class="nav-item"><a href="inscripcion.html" class="nav-link">Registro</a></li>
+                    <li class="nav-item"><a href="inscripcion.html" class="nav-link">Inscripcion General</a></li>
                     <li class="nav-item"><a href="admin.html" class="nav-link">Administración</a></li>
                 </ul>
             </div>
