--- a/admin.html
+++ b/admin.html
@@ -36,6 +36,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
+                    <li class="nav-item"><a href="inscripcion.html" class="nav-link">Registrar</a></li>
                     <li class="nav-item"><a href="acceso-gym.html" class="nav-link active">Control de Acceso</a></li>
                 </ul>
             </div>
