--- a/Planes.html
+++ b/Planes.html
@@ -1636,7 +1636,7 @@
                             </div>
                         </div>
                         <div class="plan-footer">
-                            <a href="inscripcion.html" class="plan-button">
+                            <a href="clientes.html" class="plan-button">
                                 Inscribirme ahora
                             </a>
                         </div>
@@ -1645,9 +1645,9 @@
                     <div class="plan-card featured">
                         <div class="plan-badge">Más popular</div>
                         <div class="plan-header">
-                            <h3 class="plan-name">PLAN PAREJAS</h3>
-                            <div class="plan-price">200.000 Gs</div>
-                            <div class="plan-duration">por mes (2 personas)</div>
+                            <h3 class="plan-name">Plan Trio Fit</h3>
+                            <div class="plan-price">390.000 Gs</div>
+                            <div class="plan-duration">por mes (3 personas)</div>
                         </div>
                         <div class="plan-features">
                             <div class="plan-feature">
@@ -1672,11 +1672,11 @@
                             </div>
                             <div class="plan-feature">
                                 <i class="fas fa-check"></i>
-                                <span>Ahorro del 33% por persona</span>
+                                <span>Ahorro del 13% por persona</span>
                             </div>
                         </div>
                         <div class="plan-footer">
-                            <a href="inscripcion.html" class="plan-button">
+                            <a href="clientes.html" class="plan-button">
                                 Inscribirnos ahora
                             </a>
                         </div>
@@ -1694,14 +1694,14 @@
                             <tr>
                                 <th>Características</th>
                                 <th>Plan Individual</th>
-                                <th>Plan Parejas</th>
+                                <th> Plan Trio Fit</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>Precio mensual</td>
                                 <td>150.000 Gs</td>
-                                <td>200.000 Gs (100.000 Gs por persona)</td>
+                                <td>390.000 Gs (130.000 Gs por persona)</td>
                             </tr>
                             <tr>
                                 <td>Acceso ilimitado</td>
