--- a/acceso-gym.html
+++ b/acceso-gym.html
@@ -92,6 +92,14 @@
                             <!-- El historial de accesos se mostrará aquí -->
                         </div>
                     </div>
+                    
+                    <!-- Botón para ver detalles completos del usuario -->
+                    <div class="view-details-container">
+                        <a id="viewDetailsButton" href="#" class="view-details-button">
+                            <i class="fas fa-chart-bar"></i>
+                            Ver Estadísticas Mensuales
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
