--- a/inscripcion.html
+++ b/inscripcion.html
@@ -228,7 +228,7 @@
                         <select id="plan" name="plan" required>
                             <option value="">Elige un plan</option>
                             <option value="Normal">PLAN INDIVIDUAL 150.000 Gs/mes</option>
-                            <option value="2 meses">PLAN PAREJAS 200.000 Gs/mes</option>
+                            <option value="2 meses">PLAN TRIO FIT 390.000 Gs/mes</option>
                         </select>
                     </div>
                     
