--- a/admin.html
+++ b/admin.html
@@ -36,8 +36,8 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
-                    <li class="nav-item"><a href="inscripcion.html" class="nav-link">Registrar</a></li>
                     <li class="nav-item"><a href="acceso-gym.html" class="nav-link active">Control de Acceso</a></li>
+                    <li class="nav-item"><a href="inscripcion.html" class="nav-link">Inscripcion General</a></li>
                 </ul>
             </div>
         </nav>
