--- a/Planes.html
+++ b/Planes.html
@@ -1736,7 +1736,7 @@
                             <tr>
                                 <td>Ideal para</td>
                                 <td>Personas que entrenan solas</td>
-                                <td>Parejas, amigos o familiares</td>
+                                <td>Amigos o familiares</td>
                             </tr>
                         </tbody>
                     </table>
