--- a/Planes.html
+++ b/Planes.html
@@ -1779,11 +1779,11 @@
                 
                 <div class="faq-item">
                     <div class="faq-question">
-                        <span>¿Cómo funciona el Plan Parejas?</span>
+                        <span>¿Cómo funciona el Plan Trio Fit?</span>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>El Plan Parejas permite que dos personas se inscriban juntas por un precio total de 200.000 Gs mensuales, lo que representa un ahorro del 33% por persona comparado con el plan individual. Ambas personas deben inscribirse al mismo tiempo y pueden asistir juntas o por separado al gimnasio.</p>
+                        <p>Entrena en grupo con el Plan Trío Fit: 3 personas, 390.000 Gs (130.000 Gs por persona). Incluye acceso completo al gimnasio, clases grupales y la opción de entrenamiento personalizado. ¡Motívate y ahorra!</p>
                     </div>
                 </div>
                 
