--- a/maquinas.html
+++ b/maquinas.html
@@ -78,7 +78,7 @@
                     <i class="fas fa-dumbbell"></i>
                     <span></span>
                 </div>
-                <p>Descubre nuestras máquinas de última generación para un entrenamiento completo</p>
+                <p>Maquinas disponibles en nuestro gimnasio para tu entrenamiento completo</p>
             </div>
             
             <div class="programas-grid">
