--- a/inscripcion.html
+++ b/inscripcion.html
@@ -151,6 +151,8 @@
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
                     <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
+                    <li class="nav-item"><a href="admin.html" class="nav-link">Administrador</a></li>
+                    <li class="nav-item"><a href="acceso-gym.html" class="nav-link">Control de Acceso</a></li>
                     
                 </ul>
             </div>
