--- a/inscripcion.html
+++ b/inscripcion.html
@@ -163,7 +163,7 @@
         <section class="inscripcion-section">
             <div class="inscripcion-container">
                 <div class="inscripcion-header">
-                    <h2>INSCRIPCIÓN</h2>
+                    <h2>INSCRIPCIÓN GENERAL</h2>
                     <div class="section-divider">
                         <span></span>
                         <i class="fas fa-user-plus"></i>
