--- a/clientes.html
+++ b/clientes.html
@@ -270,7 +270,7 @@
             <div class="clientes-container">
                 <div class="clientes-header">
                     
-                    <h2>INSCRIBIR AHORA!</h2>
+                    <h2>INSCRIBETE AHORA!</h2>
                     <div class="section-divider">
                         <span></span>
                         <i class="fas fa-users"></i>
