--- a/inscripcion.html
+++ b/inscripcion.html
@@ -324,7 +324,7 @@
                     </div>
                     <div class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5831363e371835393b2a373f2135763b3735">Todos los derechos reservados</a></p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5831363e371835393b2a373f2135763b3735">info@macrogymfitness.com</a></p>
                     </div>
                 </div>
                 <div class="footer-newsletter">
