--- a/clientes.html
+++ b/clientes.html
@@ -445,7 +445,7 @@
                     </div>
                     <div class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2e474048416e434f4d5c41495743004d4143">[email&#160;protected]</a></p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2e474048416e434f4d5c41495743004d4143">info@macrogymfitness.com</a></p>
                     </div>
                 </div>
                 <div class="footer-newsletter">
