--- a/Planes.html
+++ b/Planes.html
@@ -1427,8 +1427,7 @@
 
   .footer-info,
   .footer-links,
-  .footer-contact,
-  .footer-newsletter {
+  .footer-contact {
     max-width: 100%;
   }
 }
