--- a/clientes.html
+++ b/clientes.html
@@ -142,7 +142,7 @@
         
         /* 入力フィールドにアイコンがある場合の位置調整 */
         .form-group label + .form-icon {
-            top: calc(50% + 10px);
+            top: 70%;
         }
         
         /* 新しいスタイル: 送信ボタンのスタイルを変更 */
