update fotos de index

--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
         <!-- Hero Section con imagen a pantalla completa -->
         <div class="hero-section">
             <div class="hero-background">
-                <img src="img/imagen1.jpg" alt="Entrenamiento en MacroGym">
+                <img src="img index/hero1.png" alt="Entrenamiento en MacroGym">
             </div>
             <div class="hero-content">
                 <h1 class="hero-title">TRANSFORMA TU CUERPO<br>TRANSFORMA TU VIDA</h1>
@@ -82,7 +82,7 @@
             <div class="galeria">
                 <div class="card" data-aos="fade-up" data-aos-delay="100">
                     <div class="card-image">
-                        <img src="img/galeria1.jpg" alt="Equipamiento de gimnasio">
+                        <img src="img index/musculacion.webp" alt="Equipamiento de gimnasio">
                         <div class="card-overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -90,12 +90,12 @@
                     <div class="card-content">
                         <h3>Área de Pesas</h3>
                         <p>Equipamiento de última generación para tu entrenamiento de fuerza.</p>
-                        <a href="#" class="card-link">Ver más <i class="fas fa-arrow-right"></i></a>
+                        <a href="Planes.html" class="card-link">Ver más <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="200">
                     <div class="card-image">
-                        <img src="img/galeria2.jpg" alt="Área de cardio">
+                        <img src="img index/cardio.png" alt="Área de cardio">
                         <div class="card-overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -103,12 +103,12 @@
                     <div class="card-content">
                         <h3>Zona Cardio</h3>
                         <p>Máquinas modernas para mejorar tu resistencia cardiovascular.</p>
-                        <a href="#" class="card-link">Ver más <i class="fas fa-arrow-right"></i></a>
+                        <a href="Planes.html" class="card-link">Ver más <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="300">
                     <div class="card-image">
-                        <img src="img/galeria3.jpg" alt="Área funcional">
+                        <img src="img index/funcional.webp" alt="Área funcional">
                         <div class="card-overlay">
                             <i class="fas fa-search-plus"></i>
                         </div>
@@ -116,7 +116,7 @@
                     <div class="card-content">
                         <h3>Entrenamiento Funcional</h3>
                         <p>Espacio dedicado para ejercicios funcionales y de alta intensidad.</p>
-                        <a href="#" class="card-link">Ver más <i class="fas fa-arrow-right"></i></a>
+                        <a href="Planes.html" class="card-link">Ver más <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
