Update algunas imágenes de galería

--- a/galeria.html
+++ b/galeria.html
@@ -1470,7 +1470,7 @@
                     <div class="galeria-item" data-categoria="entrenamiento">
                         <div class="galeria-categoria categoria-entrenamiento">Entrenamiento</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Entrenamiento funcional" class="galeria-img">
+                            <img src="img galeria/entrenamiento_funcional.webp" alt="Entrenamiento funcional" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1512,7 +1512,7 @@
                     <div class="galeria-item" data-categoria="instalaciones">
                         <div class="galeria-categoria categoria-instalaciones">Instalaciones</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Área cardiovascular" class="galeria-img">
+                            <img src="img galeria/cardio_galeria.webp" alt="Área cardiovascular" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
@@ -1533,7 +1533,7 @@
                     <div class="galeria-item" data-categoria="equipo">
                         <div class="galeria-categoria categoria-equipo">Equipo</div>
                         <div class="galeria-img-container">
-                            <img src="/placeholder.svg?height=600&width=800" alt="Equipo de entrenadores" class="galeria-img">
+                            <img src="img/entrenador1.png" alt="Equipo de entrenadores" class="galeria-img">
                             <div class="galeria-overlay">
                                 <div class="galeria-overlay-btn">
                                     <i class="fas fa-search-plus"></i>
